--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/build
+/dist
 /.pnp
 .pnp.js
 
@@ -22,3 +24,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .env
+package-lock.json
+yarn.lock
