--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "supasmoothies",
   "version": "0.1.0",
   "private": true,
+  "source": "src/index.html",
   "dependencies": {
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
@@ -12,6 +13,7 @@
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
     "node-sass": "^8.0.0",
+    "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -23,8 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "parcel",
+    "build": "parcel build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "parcel": "latest",
+    "@parcel/transformer-sass": "^2.8.3",
+    "process": "^0.11.10"
   }
 }
