--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "source": "src/index.html",
   "dependencies": {
+    "@babel/eslint-parser": "^7.21.3",
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.10.0",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.3",
     "classnames": "^2.3.2",
+    "escope": "^4.0.0",
     "node-sass": "^8.0.0",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
@@ -28,7 +30,9 @@
     "start": "parcel",
     "build": "parcel build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "eslint": "eslint --ignore-path .gitignore '.'"
   },
   "eslintConfig": {
     "extends": [
@@ -48,9 +52,40 @@
       "last 1 safari version"
     ]
   },
+  "lint-staged": {
+    "*.js": [
+      "./node_modules/.bin/eslint"
+    ]
+  },
   "devDependencies": {
-    "parcel": "latest",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "@parcel/transformer-sass": "^2.8.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-transform-imports": "^1.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-webpack": "0.11.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "2.17.2",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
+    "parcel": "latest",
     "process": "^0.11.10"
   }
 }
