--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "supasmoothies",
+  "name": "homieroomie",
   "version": "0.1.0",
   "private": true,
   "source": "src/index.html",
   "dependencies": {
+    "antd": "^5.2.3",
     "@babel/eslint-parser": "^7.21.3",
+    "babel-eslint": "^10.1.0",
+    "classnames": "^2.3.2",
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.2.3",
-    "classnames": "^2.3.2",
     "escope": "^4.0.0",
     "node-sass": "^8.0.0",
-    "parcel": "^2.8.3",
+    "parcel": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -66,12 +67,19 @@
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@parcel/transformer-sass": "^2.8.3",
+    "@parcel/transformer-sass": "^2.0.0",
+    "babel-eslint": "8.2.6",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "eslint": "^8.37.0",
+    "bfj": "^6.1.1",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "circular-dependency-plugin": "^5.0.2",
+    "css-loader": "^2.1.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.15.3",
+    "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
@@ -85,7 +93,11 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-standard": "^4.0.0",
-    "parcel": "latest",
-    "process": "^0.11.10"
+    "parcel": "^2.0.0",
+    "process": "^0.11.10",
+    "survey-core": "latest",
+    "survey-creator-core": "latest",
+    "survey-creator-react": "latest",
+    "survey-react-ui": "latest"
   }
 }
