--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "source": "src/index.html",
   "dependencies": {
-    "antd": "^5.2.3",
     "@babel/eslint-parser": "^7.21.3",
-    "babel-eslint": "^10.1.0",
-    "classnames": "^2.3.2",
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.2.3",
+    "babel-eslint": "^10.1.0",
+    "classnames": "^2.3.2",
     "escope": "^4.0.0",
     "node-sass": "^8.0.0",
     "parcel": "^2.0.0",
@@ -25,6 +25,7 @@
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
     "scss": "^0.2.4",
+    "survey-react": "^1.9.80",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -94,6 +95,8 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "parcel": "^2.0.0",
+    "postcss": "^8.0.0",
+    "postcss-modules": "^4.3.0",
     "process": "^0.11.10",
     "survey-core": "latest",
     "survey-creator-core": "latest",
